fix: linkedIn alignment

--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ p {
 .Team-memberlinkedIn {
   display: block;
   height: 50px;
-  left: 158px;
+  left: 65%;
   position: absolute;
   top: 150px;
   width: 50px;
